--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 body {
-  margin: 0
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
