--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,34 @@ body {
   text-transform: uppercase;
   color: var(--primary-color)
 }
+
+.head-title {
+  width: 100%;
+  height: 6.94rem;
+  background-image: url(./assets/header.jpg);
+  background-position: right;
+  background-size: cover;
+  border-radius: 10px;
+  margin-top: 1.25rem;
+}
+
+.mask {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.291);
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.head-title h1 {
+  font-weight: 500;
+  font-size: 1.5rem;
+  color: #FFFFFF;
+  width: 13.56rem;
+  margin-left: 1rem;
+}
