--- a/src/index.css
+++ b/src/index.css
@@ -74,3 +74,27 @@ body {
   width: 13.56rem;
   margin-left: 1rem;
 }
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%), #FF6060;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(rgba(0, 0, 0, 0.5))), #FF6060;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%), #FF6060;
+  color: #FFFFFF;
+  width: 100%;
+  height: 15.94rem;
+    border-radius: .63rem;
+  margin-top: 1.25rem;
+}
+
+.card p {
+  margin: 1.25rem;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.13rem;
+  font-weight: medium;
+}
