--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,11 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: inherit
+}
+
 .navbar {
   display: -webkit-box;
   display: -ms-flexbox;
