--- a/src/index.css
+++ b/src/index.css
@@ -103,3 +103,15 @@ a {
   font-size: 1.13rem;
   font-weight: medium;
 }
+
+.flex-row-space-between {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
