--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ ul {
   display: flex;
   list-style: none;
   gap: .63rem;
+  font-size: .75rem;
   font-weight: medium;
   text-transform: uppercase;
   color: var(--primary-color)
@@ -108,6 +109,50 @@ ul {
   font-weight: medium;
 }
 
+.gallery-container {
+  max-width: 100%;
+  max-height: 255px;
+  overflow: hidden;
+  margin-top: 1.69rem;
+  border-radius: 10px;
+  position: relative;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.gallery-image {
+  -o-object-fit: cover;
+     object-fit: cover;
+     width: 100%;
+  height: 255px;
+  max-width: 100%;
+  position: relative;
+}
+
+#gallery-arrow__previous {
+  position: absolute;
+  top: 7.25rem;
+  left: 0;
+  cursor: pointer;
+  color: #FFFFFF;
+  text-align: center;
+  z-index: 1;
+  font-size: 1.5rem;
+}
+
+#gallery-arrow__next {
+  position: absolute;
+  top: 7.25rem;
+  right: 0;
+  cursor: pointer;
+  color: #FFFFFF;
+  text-align: center;
+  z-index: 1;
+  font-size: 1.5rem;
+}
+
 .accomodation-info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -134,7 +179,10 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 10px; /*provisoire*/
+  margin-top: 1.25rem;
 }
 
 .tag {
@@ -143,12 +191,12 @@ ul {
   text-align: center;
   background-color: #FF6060;
   color: #FFFFFF;
-  padding-top: .34rem;
-  padding-right: 2.53rem;
-  padding-bottom: .34rem;
-  padding-left: 2.53rem;
+  padding-top: .14rem;
+  padding-right: 1.81rem;
+  padding-bottom: .14rem;
+  padding-left: 1.81rem;
   border-radius: .63rem;
-  margin-top: 1.25rem;
+  max-height: 1.13rem;
 }
 
 .tags ~ div {
@@ -184,7 +232,6 @@ ul {
   width: 2rem;
   height: 2rem;
   max-width: 2rem;
-  background: #C4C4C4;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 50%;
@@ -230,8 +277,9 @@ ul {
   background-color: #F6F6F6;
   border-radius: 5px;
   padding-top: 1.08rem;
+  padding-right: .72rem;
   padding-bottom: .75rem;
-  padding-left: 0.72rem;
+  padding-left: .72rem;
   font-size: .75rem;
 }
 
