--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 
 body {
   padding: 1.25rem;
+  padding-bottom: 0;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -37,7 +38,7 @@ ul {
           align-items: center;
 }
 
-.logo {
+.navbar-logo {
   width: 9.06rem;
   height: 2.94rem;
 }
@@ -281,6 +282,40 @@ ul {
   padding-bottom: .75rem;
   padding-left: .72rem;
   font-size: .75rem;
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+  height: 13.06rem;
+  background-color: #000000;
+  color: #ffffff;
+  width: 100vw;
+  margin-top: 1.5rem;
+  margin-left: -1.25rem;
+}
+
+.footer-logo{
+  max-width: 7.63rem;
+  max-height: 2.47rem;
+}
+
+.footer p {
+  font-weight: 500;
+font-size: 12px;
+line-height: 142.6%;
 }
 
 .flex-row-space-between {
