--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,6 @@
 }
 
 body {
-  padding: 1.25rem;
-  padding-bottom: 0;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -24,6 +22,10 @@ a {
 
 ul {
   list-style: none;
+}
+
+.main-wrapper {
+  padding: 1.25rem;
 }
 
 .navbar {
@@ -204,7 +206,12 @@ ul {
   margin-top: 1rem;
 }
 
-.stars {
+.empty-star {
+  font-size: 1.13rem;
+  color: #E3E3E3
+}
+
+.full-star {
   font-size: 1.13rem
 }
 
@@ -303,8 +310,6 @@ ul {
   background-color: #000000;
   color: #ffffff;
   width: 100vw;
-  margin-top: 1.5rem;
-  margin-left: -1.25rem;
 }
 
 .footer-logo{
