--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ ul {
 
 .gallery-container {
   max-width: 100%;
-  max-height: 255px;
+  max-height: 15.94rem;
   overflow: hidden;
   margin-top: 1.69rem;
   border-radius: 10px;
@@ -129,7 +129,7 @@ ul {
   -o-object-fit: cover;
      object-fit: cover;
      width: 100%;
-  height: 255px;
+  height: 15.94rem;
   max-width: 100%;
   position: relative;
 }
@@ -291,6 +291,26 @@ ul {
   font-size: .75rem;
 }
 
+.about-image__wrapper {
+  max-width: 100%;
+  max-height: 13.94rem;
+  overflow: hidden;
+  margin-top: 1.06rem;
+  border-radius: 10px;
+}
+
+.about-image {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 13.94rem;
+  max-width: 100%;
+}
+
+.about-info {
+  margin-top: 1.19rem;
+}
+
 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -321,6 +341,44 @@ ul {
   font-weight: 500;
 font-size: 12px;
 line-height: 142.6%;
+}
+
+.not-found__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.not-found__title {
+  font-size: 6rem;
+  font-weight: bold;
+  color: #FF6060;
+  margin-top: 10rem;
+}
+
+.not-found__subtitle {
+  font-weight: 500;
+  font-size: 1.13rem;
+  line-height: 142.6%;
+  color: #FF6060;
+  text-align: center;
+}
+
+.not-found__redirect {
+  color: #FF6060;
+  text-decoration: underline;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: .88rem;
+  line-height: 142.6%;
+  margin-top: 9rem;
 }
 
 .flex-row-space-between {
