--- a/src/index.css
+++ b/src/index.css
@@ -57,6 +57,14 @@ ul {
   color: var(--primary-color)
 }
 
+.navbar__link {
+  text-decoration: none;
+}
+
+.navbar__link--active {
+  text-decoration: underline;
+}
+
 .head-title {
   width: 100%;
   height: 6.94rem;
@@ -477,6 +485,9 @@ ul {
     padding-left: 3.13rem;
     padding-top: 3.5rem;
     padding-bottom: 3.5rem;
+  }
+  .footer p {
+    font-size: 1.5rem;
   }
 }
 
