--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ ul {
   list-style: none;
   gap: .63rem;
   font-size: .75rem;
-  font-weight: medium;
+  font-weight: 500;
   text-transform: uppercase;
   color: var(--primary-color)
 }
@@ -226,7 +226,7 @@ ul {
 
 .tag {
   font-size: .63rem;
-  font-weight: medium;
+  font-weight: 500;
   text-align: center;
   background-color: var(--primary-color);
   color: #FFFFFF;
