--- a/src/index.css
+++ b/src/index.css
@@ -97,20 +97,32 @@ ul {
 }
 
 .card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%), #FF6060;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(rgba(0, 0, 0, 0.5))), #FF6060;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%), #FF6060;
   color: #FFFFFF;
   width: 100%;
   height: 15.94rem;
     border-radius: .63rem;
   margin-top: 1.25rem;
+  position: relative;
+}
+
+.card img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: .63rem;
+}
+
+.card-gradient {
+  width: 100%;
+  height: 15.94rem;
+  border-radius: .63rem;
+  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(rgba(0, 0, 0, 0.5)));
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  z-index: 3;
+  position: absolute;
+  top: 0;
 }
 
 .card p {
@@ -118,6 +130,9 @@ ul {
   font-family: 'Montserrat', sans-serif;
   font-size: 1.13rem;
   font-weight: 500;
+  z-index: 3;
+  position: absolute;
+  bottom: 0
 }
 
 .gallery-container {
