--- a/src/index.css
+++ b/src/index.css
@@ -179,6 +179,10 @@ ul {
   font-size: 1.5rem;
 }
 
+.gallery-counter {
+  display: none;
+}
+
 .accomodation-info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -547,6 +551,20 @@ ul {
     width: 2.5rem;
     height: 2.5rem;
     max-width: 2.5rem;
+  }
+  .gallery-counter {
+    display: block;
+    position: absolute;
+    top: 22.35rem;
+    left: 50%;
+    color: #FFFFFF;
+    text-align: center;
+    z-index: 1;
+    font-weight: 500;
+    font-size: 1.13rem;
+    -webkit-transform: translate(-50%);
+        -ms-transform: translate(-50%);
+            transform: translate(-50%);
   }
 }
 
